--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,9 @@
             <a class="nav-link" href="{{ url_for('about_us') }}">Om oss</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('users') }}">Brukere</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{{ url_for('login') }}">Logg inn</a>
           </li>
           <li class="nav-item">
