--- a/templates/register.html
+++ b/templates/register.html
@@ -2,47 +2,58 @@
 
 {% block content %}
   <div class="content-section">
-    <form method="POST" action="">
+    <form method="POST">
       {{form.hidden_tag()}}
       <fieldset class="form-group">
         <legend class="border-bottom mb-4">Opprett ny bruker</legend>
+        <!-- Begin username -->
         <dir class="form-group">
           {{ form.username.label(class="form-control-label")}}
-
-          {% if form.username.errors %}
+          {% if form.username.errors %}if
             {{ form.username(class="form-control form-control-lg")}}
-
-            <div class="invalid-feedback">
+            <div class="feedback">
               {% for error in form.username.errors %}
-                <span>{{ error }}</span>
+                <span class="">{{ error }}</span>
               {% endfor %}
             </div>
           {% else %}
             {{ form.username(class="form-control form-control-lg")}}
           {% endif %}
-
         </dir>
+        <!-- End username -->
+       <!-- Begin email -->
         <dir class="form-group">
           {{ form.email.label(class="form-control-label")}}
-          {{ form.email(class="form-control form-control-lg")}}
+          {% if form.email.errors %}if
+            {{ form.email(class="form-control form-control-lg")}}
+            <div class="feedback">
+              {% for error in form.email.errors %}
+                <span class="">{{ error }}</span>
+              {% endfor %}
+            </div>
+          {% else %}
+            {{ form.email(class="form-control form-control-lg")}}
+          {% endif %}
         </dir>
+        <!-- End email -->
         <dir class="form-group">
           {{ form.password.label(class="form-control-label")}}
           {{ form.password(class="form-control form-control-lg")}}
         </dir>
+        <!-- Begin confirm password -->
         <dir class="form-group">
           {{ form.confirm_password.label(class="form-control-label")}}
           {% if form.confirm_password.errors %}
             {{ form.confirm_password(class="form-control form-control-lg")}}
-
-            <div class="invalid-feedback">
+            <div class="feedback">
               {% for error in form.confirm_password.errors %}
-                <span>{{ error }}</span>
+                <span class="">{{ error }}</span>
               {% endfor %}
             </div>
           {% else %}
             {{ form.confirm_password(class="form-control form-control-lg")}}
           {% endif %}
+        <!-- End confirm password -->
           
         </dir>
       </fieldset>
