--- a/templates/base.html
+++ b/templates/base.html
@@ -12,38 +12,37 @@
 
     <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../static/css/usertheme.css">
-		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-		<script type="text/javascript" src="../static/js/popper.js"> </script>
-		<script type="text/javascript" src="../static/js/bootstrap.js"> </script>
+	
 
   </head>
 
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">{{info.company_name}}</a>
+      <a class="navbar-brand" href="/">{{info.company_name}}</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+       	
+          <li class="nav-item {% if info.current_tab == "home" %} active {% endif %}">
             <a class="nav-link" href="{{ url_for('home') }}">Hjem <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item {% if info.current_tab == "products" %} active {% endif %}">
             <a class="nav-link" href="{{ url_for('products') }}">Produkter</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item {% if info.current_tab == "about_us" %} active {% endif %}">
             <a class="nav-link" href="{{ url_for('about_us') }}">Om oss</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item {% if info.current_tab == "users" %} active {% endif %}">
             <a class="nav-link" href="{{ url_for('users') }}">Brukere</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item {% if info.current_tab == "login" %} active {% endif %}">
             <a class="nav-link" href="{{ url_for('login') }}">Logg inn</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item {% if info.current_tab == "register" %} active {% endif %}">
             <a class="nav-link" href="{{ url_for('register') }}">Ny bruker</a>
           </li>
           <!--
@@ -142,9 +141,14 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+	<script type="text/javascript" src="../static/js/popper.js"> </script>
+	<script type="text/javascript" src="../static/js/bootstrap.js"> </script>
+    <!-- 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="../../assets/js/vendor/popper.min.js"></script>
     <script src="../../dist/js/bootstrap.min.js"></script>
+     -->
   </body>
 </html>
