--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
         <ul class="navbar-nav mr-right">
           {% if current_user.is_authenticated %}
           <li class="nav-item {% if info.current_tab == "logout" %} active {% endif %}">
-            <a class="nav-link" href="{{ url_for('logout') }}">Logg ut</a>
+            <a class="nav-link" href="{{ url_for('logout') }}">Logg ut ({{current_user.username}})</a>
           </li>
           {% else %}
           <li class="nav-item {% if info.current_tab == "register" %} active {% endif %}">
